--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "serve": "^14.2.3",
     "typescript": "^4.4.2",
     "uuid": "^11.0.2",
