--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=http://localhost:3081
+REACT_APP_BACKEND_URL=https://protravka-backend.kindtree-c4dcf206.northeurope.azurecontainerapps.io
