--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
     "leaflet": "^1.9.4",
+    "log4js": "^6.9.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
