--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=https://protravka-backend.kindtree-c4dcf206.northeurope.azurecontainerapps.io:3081
+REACT_APP_BACKEND_URL=https://protravka-backend.kindtree-c4dcf206.northeurope.azurecontainerapps.io
