--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.21",
   "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/icons": "^2.2.4",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -28,7 +28,6 @@
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
-    "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "serve": "^14.2.3",
     "typescript": "^4.4.2",
@@ -47,12 +46,6 @@
     "deploy": "npm run docker-build && wsl --setdefault Ubuntu && bash deploy.sh",
     "ssh-azure-container": "az containerapp exec --name protravka-web --resource-group protravka --container protravka-web --command \"/bin/sh\""
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -67,6 +60,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/leaflet": "^1.9.12"
+    "@types/leaflet": "^1.9.12",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^3.4.1",
+    "react-scripts": "^5.0.1"
   }
 }
