--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "express": "^4.19.2",
+    "firebase": "^11.0.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
     "leaflet": "^1.9.4",
