--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^11.0.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "log4js": "^6.9.1",
     "react": "^18.3.1",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/js-cookie": "^3.0.6",
     "@types/leaflet": "^1.9.12",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "eslint-config-prettier": "^9.1.0",
