Update project metadata and enhance VSCode settings for improved development experience

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AviMate",
-  "name": "Avimate - AI companion for your flight-sim experience",
+  "short_name": "Teravix",
+  "name": "Teravix - Advanced Seed Treatment Management System",
   "icons": [
     {
       "src": "favicon.ico",
