--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "log4js": "^6.9.1",
+    "logrocket": "^9.0.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
