--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.19.2",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.12",
+    "i18next": "^23.16.8",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "log4js": "^6.9.1",
@@ -30,6 +31,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.3",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
@@ -37,7 +39,7 @@
     "react-to-print": "^3.0.2",
     "redux-persist": "^6.0.0",
     "serve": "^14.2.3",
-    "typescript": "^4.4.2",
+    "typescript": "^4.9.5",
     "uuid": "^11.0.2",
     "web-vitals": "^2.1.0",
     "workbox-background-sync": "^7.3.0",
@@ -72,7 +74,9 @@
     "@types/leaflet": "^1.9.12",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-i18next": "^6.1.1",
     "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-i18next": "^1.1.0",
     "prettier": "^3.4.1",
     "react-scripts": "^5.0.1",
     "workbox-cli": "^7.3.0"
