--- a/package.json
+++ b/package.json
@@ -1,84 +1,91 @@
 {
-  "name": "protravka-web",
-  "version": "0.2.91",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@redux-offline/redux-offline": "^2.6.0",
-    "@reduxjs/toolkit": "^2.3.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/serviceworker": "^0.0.108",
-    "@types/workbox-sw": "^4.3.7",
-    "chart.js": "^4.4.7",
-    "chartjs-plugin-datalabels": "^2.2.0",
-    "express": "^4.19.2",
-    "formik": "^2.4.6",
-    "framer-motion": "^11.2.12",
-    "i18next": "^23.16.8",
-    "js-cookie": "^3.0.5",
-    "leaflet": "^1.9.4",
-    "log4js": "^6.9.1",
-    "logrocket": "^9.0.2",
-    "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^14.1.3",
-    "react-icons": "^5.3.0",
-    "react-leaflet": "^4.2.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.0",
-    "react-to-print": "^3.0.2",
-    "redux-persist": "^6.0.0",
-    "serve": "^14.2.3",
-    "typescript": "^4.9.5",
-    "uuid": "^11.0.2",
-    "web-vitals": "^2.1.0",
-    "workbox-background-sync": "^7.3.0",
-    "yup": "^1.4.0"
-  },
-  "scripts": {
-    "dev": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "get-version": "node -p \"require('./package.json').version\"",
-    "docker-build": "npm run increase-package-version && docker build -t protravka-web .",
-    "docker-run": "docker run -p 80:80 protravka-web",
-    "increase-package-version": "npm version patch",
-    "deploy": "npm run docker-build && wsl --setdefault Ubuntu && bash deploy.sh",
-    "ssh-azure-container": "az containerapp exec --name protravka-web --resource-group protravka --container protravka-web --command \"/bin/sh\""
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/js-cookie": "^3.0.6",
-    "@types/leaflet": "^1.9.12",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-i18next": "^6.1.1",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-i18next": "^1.1.0",
-    "prettier": "^3.4.1",
-    "react-scripts": "^5.0.1",
-    "workbox-cli": "^7.3.0"
-  }
+    "name": "protravka-web",
+    "version": "0.2.91",
+    "private": true,
+    "dependencies": {
+        "@chakra-ui/icons": "^2.2.4",
+        "@chakra-ui/react": "^2.8.2",
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@redux-offline/redux-offline": "^2.6.0",
+        "@reduxjs/toolkit": "^2.3.0",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "@types/serviceworker": "^0.0.108",
+        "@types/workbox-sw": "^4.3.7",
+        "@vitejs/plugin-react": "^4.3.4",
+        "chart.js": "^4.4.7",
+        "chartjs-plugin-datalabels": "^2.2.0",
+        "express": "^4.19.2",
+        "formik": "^2.4.6",
+        "framer-motion": "^11.2.12",
+        "global": "^4.4.0",
+        "i18next": "^23.16.8",
+        "js-cookie": "^3.0.5",
+        "leaflet": "^1.9.4",
+        "log4js": "^6.9.1",
+        "logrocket": "^9.0.2",
+        "react": "^18.3.1",
+        "react-chartjs-2": "^5.2.0",
+        "react-dom": "^18.3.1",
+        "react-i18next": "^14.1.3",
+        "react-icons": "^5.3.0",
+        "react-leaflet": "^4.2.1",
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.24.0",
+        "react-to-print": "^3.0.2",
+        "redux-persist": "^6.0.0",
+        "serve": "^14.2.3",
+        "uuid": "^11.0.2",
+        "vite": "^6.1.0",
+        "vite-tsconfig-paths": "^5.1.4",
+        "web-vitals": "^2.1.0",
+        "workbox-background-sync": "^7.3.0",
+        "yup": "^1.4.0"
+    },
+    "scripts": {
+        "start": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "get-version": "node -p \"require('./package.json').version\"",
+        "docker-build": "npm run increase-package-version && docker build -t protravka-web .",
+        "docker-run": "docker run -p 80:80 protravka-web",
+        "increase-package-version": "npm version patch",
+        "deploy": "npm run docker-build && wsl --setdefault Ubuntu && bash deploy.sh",
+        "ssh-azure-container": "az containerapp exec --name protravka-web --resource-group protravka --container protravka-web --command \"/bin/sh\"",
+        "lint:fix": "eslint --fix src"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@eslint/js": "^9.20.0",
+        "@types/js-cookie": "^3.0.6",
+        "@types/leaflet": "^1.9.12",
+        "@types/node": "^22.13.4",
+        "@typescript-eslint/eslint-plugin": "^5.9.0",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-i18n-validator": "^0.1.4",
+        "eslint-plugin-i18next": "^6.1.1",
+        "eslint-plugin-react": "^7.37.4",
+        "prettier": "^3.4.1",
+        "typescript": "^5.7.3",
+        "typescript-eslint": "^8.24.0",
+        "workbox-cli": "^7.3.0"
+    }
 }
