--- a/package.json
+++ b/package.json
@@ -74,14 +74,13 @@
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@eslint/js": "^9.20.0",
+        "@m6web/eslint-plugin-i18n": "^2.0.4",
         "@types/js-cookie": "^3.0.6",
         "@types/leaflet": "^1.9.12",
         "@types/node": "^22.13.4",
         "@typescript-eslint/eslint-plugin": "^5.9.0",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-i18n-validator": "^0.1.4",
-        "eslint-plugin-i18next": "^6.1.1",
         "eslint-plugin-react": "^7.37.4",
         "prettier": "^3.4.1",
         "typescript": "^5.7.3",
