Refactor components to remove unnecessary React imports and improve type definitions; update TypeScript configuration for JSX support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "types": ["vite/client"],
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "jsxImportSource": "react"
   },
   "include": [
     "src",
