--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/workbox-sw": "^4.3.7",
         "@vitejs/plugin-react": "^4.3.4",
         "chart.js": "^4.4.7",
+        "chartjs-adapter-moment": "^1.0.1",
         "chartjs-plugin-datalabels": "^2.2.0",
         "express": "^4.19.2",
         "formik": "^2.4.6",
@@ -29,6 +30,7 @@
         "leaflet": "^1.9.4",
         "log4js": "^6.9.1",
         "logrocket": "^9.0.2",
+        "moment": "^2.30.1",
         "react": "^18.3.1",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.3.1",
