Add candlestick chart support in LotLabReport and update dependencies

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@vitejs/plugin-react": "^4.3.4",
         "chart.js": "^4.4.7",
         "chartjs-adapter-moment": "^1.0.1",
+        "chartjs-chart-financial": "^0.2.1",
         "chartjs-plugin-datalabels": "^2.2.0",
         "express": "^4.19.2",
         "formik": "^2.4.6",
