--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "chartjs-chart-financial": "^0.2.1",
         "chartjs-plugin-datalabels": "^2.2.0",
         "express": "^4.19.2",
+        "fast-deep-equal": "^3.1.3",
         "formik": "^2.4.6",
         "framer-motion": "^11.2.12",
         "global": "^4.4.0",
