--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 VITE_APP_BACKEND_URL=http://localhost:3081
+VITE_FIREBASE_API_KEY=AIzaSyB4MW4pY-G32xlfBGS-LeXg0yO4SzahdZk
+VITE_FIREBASE_AUTH_DOMAIN=protravka-fea6a.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=protravka-fea6a
+VITE_FIREBASE_STORAGE_BUCKET=protravka-fea6a.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=563545771041
+VITE_FIREBASE_APP_ID=1:563545771041:web:11d8318996f45c19702760
