Add Firebase VAPID key to environment files and update service worker for dynamic Firebase configuration

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_FIREBASE_PROJECT_ID=protravka-fea6a
 VITE_FIREBASE_STORAGE_BUCKET=protravka-fea6a.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=563545771041
 VITE_FIREBASE_APP_ID=1:563545771041:web:11d8318996f45c19702760
+VITE_FIREBASE_VAPID_KEY=BGBaGqkM83WPDgLWhv7TKL88I6Jxv14yTM37zYs1O5-53c3bffSnr2GL34EGnOxTNQ0PoW_t9dsS3ZnjM6RzagE
