--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VITE_APP_BACKEND_URL=https://protravka-backend.kindtree-c4dcf206.northeurope.azurecontainerapps.io
+VITE_APP_BACKEND_URL=https://api.teravix.tech
 VITE_FIREBASE_API_KEY=AIzaSyB4MW4pY-G32xlfBGS-LeXg0yO4SzahdZk
 VITE_FIREBASE_AUTH_DOMAIN=protravka-fea6a.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=protravka-fea6a
