--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-leaflet": "^4.2.1",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.24.0",
+        "react-swipeable": "^7.0.2",
         "react-to-print": "^3.0.2",
         "redux-persist": "^6.0.0",
         "serve": "^14.2.3",
