--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "tabWidth": 4,
-  "semi": true,
-  "singleQuote": true,
-  "trailingComma": "all",
-  "useTabs": false,
-  "printWidth": 100
+    "tabWidth": 4,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "useTabs": false,
+    "printWidth": 100,
+    "endOfLine": "lf"
 }
